# OpenChisel

./: CMakeLists.txt
open_chisel/: CMakeLists.txt
open_chisel/include/open_chisel/: Chisel.h  ChunkManager.h  DistVoxel.h  ProjectionIntegrator.h
open_chisel/include/open_chisel/camera/: ColorImage.h  DepthImage.h
open_chisel/include/open_chisel/io/: PLY.h
open_chisel/include/open_chisel/marching_cubes/: MarchingCubes.h
open_chisel/include/open_chisel/threading/: Threading.h
open_chisel/include/open_chisel/truncation/: ConstantTruncator.h  QuadraticTruncator.h
open_chisel/src/: Chisel.cpp  Chunk.cpp  ChunkManager.cpp  DistVoxel.cpp  ProjectionIntegrator.cpp
open_chisel/src/camera/: PinholeCamera.cpp
open_chisel/src/geometry/: Raycast.cpp
open_chisel/src/io/: PLY.cpp
